--- a/packages/remax-cli/src/__tests__/fixtures/typescript/expected/wechat/pages/page3/index.wxml
+++ b/packages/remax-cli/src/__tests__/fixtures/typescript/expected/wechat/pages/page3/index.wxml
@@ -1,3 +1,3 @@
-<wxs src="./pages_page3/index_helper.wxs" module="helper" />
+<wxs src="./index_helper.wxs" module="helper" />
 <import src="/base.wxml"/>
 <template is="REMAX_TPL" data="{{tree: helper.reduce(action)}}" />
